# engram

./: .gitignore  Engram — The Open-Source Agent Memory Framework.md  README.md  pyproject.toml
engram/: __init__.py  client.py  config.py  lifecycle.py  models.py  observability.py  policy.py  schema.py  testing.py
engram/storage/: __init__.py  base.py  memory.py  qdrant.py  ranking.py  sqlite.py
examples/: 01_quickstart.py  02_policy_engine.py  03_observability.py  04_storage_backends.py  05_embeddings.py  06_chat_with_memory.py  07_framework_adapters.py  08_llm_reflection.py  09_agent_attribution.py  10_testing.py  11_background_jobs.py
tests/: test_harness.py  test_policy_engine.py  test_storage.py
