[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "engramx"
version = "0.1.0"
description = "EngramX — The open-source agent memory framework with pluggable storage, lifecycle policies, observability, and framework adapters."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nilesh Verma", email = "me@nileshverma.com" }
]
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]
keywords = ["ai", "agents", "memory", "llm", "langchain", "llamaindex", "autogen", "rag", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/TechyNilesh/EngramX"
Repository = "https://github.com/TechyNilesh/EngramX"
Issues = "https://github.com/TechyNilesh/EngramX/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
postgres = ["asyncpg>=0.29"]
chroma = ["chromadb>=0.4"]
qdrant = ["qdrant-client>=1.7"]
redis = ["redis>=5.0"]
neo4j = ["neo4j>=5.0"]
mem0 = ["mem0ai>=0.1"]
zep = ["zep-python>=2.0"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
litellm = ["litellm>=1.0"]
sentence-transformers = ["sentence-transformers>=2.0"]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
autogen = ["pyautogen>=0.2"]
langgraph = ["langgraph>=0.2", "langchain-openai>=0.1"]
all = [
    "asyncpg>=0.29",
    "chromadb>=0.4",
    "qdrant-client>=1.7",
    "redis>=5.0",
    "neo4j>=5.0",
    "mem0ai>=0.1",
    "zep-python>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "litellm>=1.0",
    "sentence-transformers>=2.0",
    "langchain-core>=0.2",
    "llama-index-core>=0.10",
    "pyautogen>=0.2",
    "langgraph>=0.2",
    "langchain-openai>=0.1",
]

[tool.setuptools]
packages = ["engramx", "engramx.storage", "engramx.adapters"]
